--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "classnames": "^2.3.2",
     "history": "^5.3.0",
     "path": "^0.12.7",
